# firecrawl-quickstarts

./: .gitignore  README.md  claude_researcher_with_map.ipynb  crawl_and_extract_with_openai_o1.ipynb  crawl_and_extract_with_xai_grok.ipynb  firecrawl_map_endpoint_tutorial.ipynb  job_scraping_tutorial.ipynb  llm_extract_tutorial.ipynb  map_endpoint_quickstart.ipynb  openai_o1_firecrawl_integration.ipynb  web_crawler_grok_firecrawl.ipynb
.github/workflows/: paper-tracker.yml
events-scout-examples/: eventbrite.ipynb  luma.ipynb
examples/: .gitignore  __init__.py
examples/firecrawl_automated_whitepaper_tracking/: .env_example  .gitignore  README.md  __init__.py  article_draft.md  category_prompt.py  crawl_daily_papers.py  database.py  discord_notifications.py  firecrawl_crawl_extract.py  hf_white_paper_tracker.py  llm_extract_details.py  logging_config.py  main.py  notifications.py  paper-tracker.yml  paper_details.json  pyproject.toml  semantic_filter.py  supabase_db.py  test.yml  test_semantic_filter.py  test_webhook.py  ui.py  utils.py  x_post.py  x_post_v2.py  x_post_v3.py
examples/firecrawl_automated_whitepaper_tracking/.github/workflows/: paper-tracker.yml  test.yml
examples/firecrawl_automated_whitepaper_tracking/tests/: test_semantic_filter.py
