[tool.poetry]
name = "firecrawl-automated-whitepaper-tracking"
version = "0.1.0"
description = ""
authors = ["alexfazio <alessandro.fazio@me.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
streamlit = "*"
firecrawl-py = "*"
pydantic = "*"
psycopg2-binary = "*"
python-dotenv = "*"
sqlalchemy = "*"
pandas = "*"
plotly = "*"
aiohttp = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
