[tool.poetry]
name = "firecrawl-automated-whitepaper-tracking"
version = "0.1.0"
description = ""
authors = ["alexfazio <alessandro.fazio@me.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.9.7,<3.11"
streamlit = "1.41.1"
firecrawl-py = "*"
pydantic = "2.10.4"
psycopg2-binary = "*"
python-dotenv = "*"
sqlalchemy = "*"
pandas = "2.2.3"
plotly = "5.24.1"
aiohttp = "*"
altair = "5.5.0"
watchdog = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
