[tool.poetry]
name = "firecrawl-automated-whitepaper-tracking"
version = "0.1.0"
description = ""
authors = ["alexfazio <alessandro.fazio@me.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.15"
firecrawl-py = "1.6.8"
pydantic = "2.10.4"
psycopg2-binary = "2.9.10"
python-dotenv = "1.0.1"
sqlalchemy = "*"
pandas = "2.2.3"
plotly = "5.24.1"
aiohttp = "3.11.11"
altair = "5.5.0"
openai = ">=0.28.0"
pytz = "2024.1"
requests-oauthlib = "^2.0.0"
requests = "^2.32.3"
playwright = "^1.49.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
